--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.8'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.0.2'
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
